# baike-correction

./: README.md  main.py  pyproject.toml
baike_correction/embedding/: __init__.py  base.py  bge.py  embedding_registry.py  factory.py  gemini.py  openai.py  qwen.py
baike_correction/key_word_extractor/: __init__.py  base.py  factory.py  yake.py
baike_correction/merger/: __init__.py  base.py  factory.py  key_words.py  semantics.py
baike_correction/splitter/: __init__.py  __main__.py  base.py  factory.py  merge.py  sentence.py
baike_correction/utils/: tools.py  type_utils.py
configs/: config.yaml  kw_config.yaml
